--- a/WebTitle01.html
+++ b/WebTitle01.html
@@ -11,10 +11,26 @@
   </p>
   <hr />
   <h2> This is text within heading&nbsp;2 element</h2>
+  <p> This   
+	  <br />paragraph have
+	  <br />exactly two line
   <hr />
   <h3> This is text within heading 3 element</h3>
   <hr />
   <p> This is text within element paragraph</p>
   <p> This is anothert text within element paragraph</p>
+  
+  <ul>
+     <li>red</li>
+	 <li>green</li>
+	 <li>blue</li>
+  </ul>
+  
+   <ol>
+     <li>red</li>
+	 <li>green</li>
+	 <li>blue</li>
+   </ol>
+   
  </body>
  </html>
