--- a/WebTitle01.html
+++ b/WebTitle01.html
@@ -25,12 +25,17 @@
 	 <li>green</li>
 	 <li>blue</li>
   </ul>
-  
-   <ol>
+   
+  <ol type="1">
      <li>red</li>
 	 <li>green</li>
 	 <li>blue</li>
-   </ol>
-   
+  </ol>
+ 
+ <dl>
+     <dt>coffee</dt>
+	 <dd>-bitter</dd>
+	 <dd>-brown</dd>
+  </dl>
  </body>
  </html>
