--- a/Kaia's resume.html
+++ b/Kaia's resume.html
@@ -13,7 +13,7 @@
 
     <h2>Basic Information</h2>
     <ul>
-      <li><b>Name:</b> Cui Yuhan(Kaia)</li>
+      <li><b>Name:</b> Yuhan Cui(Kaia)</li>
       <li><b>Nationality:</b> Chinese</li>
       <li><b>Birthday:</b> 27/08/1999</li>
       <li><b>Tel: </b>0668117450</li>
@@ -25,7 +25,7 @@
     <ul style="list-style-type: square;">
       <li><b>Southwest University of Science and Technology</b>  </li>
       <span>2018-2022 ······ Chinese Language and Literature Major</span> 
-      <br>2019-2022 ······ Business English Majo</br>
+      <br>2019-2022 ······ Business English Major</br>
       <li><b>University of Belgrade</b> </li>
       <span> 2022-Now&nbsp;&nbsp; ······ IMBI major</span>
     </ul>
