--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume</title>
-</head>
-<body>
-  <div class="main">
-    <h1><b>Resume</b></h1>
-    <hr>
-
-    <h2>Basic Information</h2>
-    <ul>
-      <li><b>Name:</b> Cui Yuhan(Kaia)</li>
-      <li><b>Nationality:</b> Chinese</li>
-      <li><b>Birthday:</b> 27/08/1999</li>
-      <li><b>Tel: </b>0668117450</li>
-      <li><b>Email: </b>cui.yuhan@powerchina-intl.eu</li>
-    </ul>
-    <hr>
-
-    <h2>Education Background</h2>
-    <ul style="list-style-type: square;">
-      <li><b>Southwest University of Science and Technology</b>  </li>
-      <span>2018-2022 ······ Chinese Language and Literature Major</span> 
-      <br>2019-2022 ······ Business English Majo</br>
-      <li><b>University of Belgrade</b> </li>
-      <span> 2022-Now&nbsp;&nbsp; ······ IMBI major</span>
-    </ul>
-    <hr>
-
-    <h2>Work Experience</h2>
-    <ul>
-      <li> PowerChina······Bypass of Belgrade Project······officer</li>
-    </ul>
-  </div>
-</body>
-</html>
+   <title>Web page title</title>
+ </head>
+ 
+ <body>
+ 
+  <h1> This is text within heading 1 element</h1>
+  
+  <p title="How are you">
+     happy <b>life</b>, happy daily
+  </p>
+  <hr />
+  <h2> This is text within heading&nbsp;2 element</h2>
+  <p> This   
+	  <br />paragraph have
+	  <br />exactly two line
+  <hr />
+  <h3><b> This is text within heading 3 element</h3></b>
+  <img src='fish.jpg' />
+  <hr />
+  <p> This is text within element paragraph</p>
+  <p> <i>This is anothert text within element paragraph</p></i>
+  
+  <ul>
+     <li>red</li>
+	 <li>green</li>
+	 <li>blue</li>
+  </ul>
+   
+  <ol type="1">
+     <li>red<sub>1</sub></li>
+	 <li>green<sup>2</sup></li>
+	 <li>blue</li>
+  </ol>
+ 
+ <dl>
+     <dt>coffee</dt>
+	 <dd>-bitter</dd>
+	 <dd>-brown</dd>
+	 
+	 <h2> Drinks</h2>
+<ol>
+   <li><mark>tea</mark></li>	
+	<ol type="a">
+	  <li>black tea</li>
+	  <li>red tea</li>
+	  <li>green tea</li>
+	     <ul>
+		    <li><ins>china</ins></li>
+	        <li>indian</li>
+		 </ul>
+	  </li>
+    </ol>		 
+	<li>coffee</li>	  
+	<li><del>cola</del></li>
+  </dl>
+ </body>
+ </html>
