--- a/Chengdu.html
+++ b/Chengdu.html
@@ -12,7 +12,7 @@
 
 <body>
 <h1>
-<center><a href="file:///F:/%E6%A1%8C%E9%9D%A2%E6%96%87%E4%BB%B6C%E8%BD%AC%E7%A7%BB%E5%88%B0F/%E7%AE%80%E5%8E%86%E7%BC%96%E7%A8%8B/second%20page.html"target="_blank" >WELCOME TO MY PAGE</a></center>
+<center><a href="https://kaiacui.github.io/second%20page.html"target="_blank" >WELCOME TO MY PAGE</a></center>
 
 
 
