--- a/second page.html
+++ b/second page.html
@@ -7,7 +7,7 @@
 <p><a href="file:///F:/%E6%A1%8C%E9%9D%A2%E6%96%87%E4%BB%B6C%E8%BD%AC%E7%A7%BB%E5%88%B0F/%E7%AE%80%E5%8E%86%E7%BC%96%E7%A8%8B/hometown.html" target="_blank" rel="noopener"></a></p>
 <p><a href="https://kaiacui.github.io/faculty.html" target="_blank" rel="noopener"></a></p>
 <ul>
-<li><a href="KaiaCui.github.io/faculty.html" target="_blank" rel="noopener"><b>Faculty:</b> Southwest University of Science and Technology</a></li>
+<li><a href="https://kaiacui.github.io/faculty.html" target="_blank" rel="noopener"><b>Faculty:</b> Southwest University of Science&nbsp;and Technology</a></li>
 </ul>
 <p><a href="https://kaiacui.github.io/faculty.html" target="_blank" rel="noopener"></a></p>
 <p><a href="目标网址" target="_blank" rel="noopener"></a></p>
